--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,24 +6,24 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-  build:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-        
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-          
-      - name: Install dependencies
-        run: npm install
-        
-      - name: Run tests
-        run: npm test
-
-  deplopy:
-    needs: build
-    runs-on: ubuntu-latest
+#  build:
+#    needs: test
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Check out repository
+#        uses: actions/checkout@v2
+#        
+#      - name: Set up Node.js
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: '14'
+#          
+#      - name: Install dependencies
+#        run: npm install
+#        
+#      - name: Run tests
+#        run: npm test
+#
+#  deplopy:
+#    needs: build
+#    runs-on: ubuntu-latest
