--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   call_external_job:
-    uses: ./.github/workflows/jobs/test.yml
+    uses: AlanwMelo/feegow-challenge-qa-engineer/.github/workflows/test.yml@main
 
 #  build:
 #    needs: test
