--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,15 +19,13 @@ jobs:
         
         - name: Configuta o Robot e o Selenium
           run: |
-            #python3 -m pip install --upgrade pip
-            #pip install selenium
-            #pip install robotframework
-            #pip install robotframework-seleniumlibrary
-            #pip install robotframework-requests
+            python3 -m pip install --upgrade pip
+            pip install selenium
+            pip install robotframework
+            pip install robotframework-seleniumlibrary
+            pip install robotframework-requests
             
         - name: Test
           run: |
-            pwd
             cd /home/runner/work/feegow-challenge-qa-engineer/feegow-challenge-qa-engineer
-            ls -ltr
-            #robot ./2.automation-tests/alan/agendamento_cancelamento.robot
+            robot ./2.automation-tests/alan/agendamento_cancelamento.robot
