--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,37 +6,40 @@ on:
 
 jobs:
     test_aplication:
-        runs-on: ubuntu-latest
-        steps:
-        # Configura o container para ter o python instalado
-        - name: Instala o python
-          uses: actions/setup-python@v2
-          with:
-            python-version: '3.12.3'
-        
-        - name: Clona o repositorio
-          uses: actions/checkout@v2
-        
-        - name: Configuta o Robot e o Selenium
-          run: |
-            python3 -m pip install --upgrade pip
-            pip install selenium
-            pip install robotframework
-            pip install robotframework-seleniumlibrary
-            pip install robotframework-requests
-        
-        - name: Instala o chrome
-          run: |
-              sudo apt update
-              sudo apt install -y google-chrome-stable
-            
-        - name: Test
-          run: |
-            cd /home/runner/work/feegow-challenge-qa-engineer/feegow-challenge-qa-engineer
-            robot ./2.automation-tests/alan/agendamento_cancelamento.robot
-
-        - name: Salva o log do robot
-          uses: actions/upload-artifact@v3
-          with:
-            name: robot_log.html
-            path: ./2.automation-tests/alan/log.html
+      runs-on: ubuntu-latest
+      container:
+        image: marketsquare/robotframework-browser:latest
+      steps:
+      # Configura o container para ter o python instalado
+      #- name: Instala o python
+      #  uses: actions/setup-python@v2
+      #  with:
+      #    python-version: '3.12.3'
+      
+      - name: Clona o repositorio
+        uses: actions/checkout@v2
+      
+      #- name: Configuta o Robot e o Selenium
+      #  run: |
+      #    python3 -m pip install --upgrade pip
+      #    pip install selenium
+      #    pip install robotframework
+      #    pip install robotframework-seleniumlibrary
+      #    pip install robotframework-requests
+      
+      #- name: Instala o chrome
+      #  run: |
+      #      sudo apt update
+      #      sudo apt-get install -y google-chrome-stable
+      #      sudo apt-get install -y xvfb
+      #      Xvfb :99 -ac &
+          
+      - name: Test
+        run: |
+          cd /home/runner/work/feegow-challenge-qa-engineer/feegow-challenge-qa-engineer
+          robot --variable CHROME_OPTIONS="add_argument("--headless") add_argument("--disable-gpu") add_argument("--no-sandbox")" add_argument("--remote-debugging-port=9222") ./2.automation-tests/alan/agendamento_cancelamento.robot
+      - name: Salva o log do robot
+        uses: actions/upload-artifact@v3
+        with:
+          name: robot_log.html
+          path: ./2.automation-tests/alan/log.html
