--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Exemplo de teste 2
+        env:
+            my_name: ${{ secrets.MY_NAME }}
         run: echo " Its a me $my_name --- ${{ secrets.MY_NAME }}"
 
   teste_1:
