--- a/.github/workflows/test_3.yml
+++ b/.github/workflows/test_3.yml
@@ -5,21 +5,23 @@ on:
     workflow_call:
       
 env: 
-  VAR_TESTE_3: "Variavel do teste 3"
+  VAR_TESTE_3: "Variavel global do teste 3"
 
 jobs:
     test_aplication:
       runs-on: ubuntu-latest
-      outputs:
-        output1: ${{ steps.step1.outputs.VAR_TESTE_3 }}
 
       steps:
       - name: Exemplo de teste 3
         id: step1
         run: |
-            sleep 45
-            echo "$VAR_TESTE_3"
-            echo "Passado a variavel para frente"
-            echo "output1=$VAR_TESTE_3" >> $GITHUB_OUTPUT
-
+            sleep 18
+            echo "$VAR_TESTE_3 no 3"
             echo "Teste 3 concluido"
+
+      - name: Exemplo de teste 3.5
+        id: step2
+        run: |
+            sleep 18
+            echo "$VAR_TESTE_3 no 3.5"
+            echo "Teste 3.5 concluido"
