--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-2.automation-tests/alan/report.html
-2.automation-tests/alan/output.xml
-2.automation-tests/alan/myenv/*
+2.automation-tests/report.html
+2.automation-tests/output.xml
+2.automation-tests/alan/*
